--- a/package.yaml
+++ b/package.yaml
@@ -35,6 +35,9 @@ ghc-options:
 
 library:
   source-dirs: src
+  dependencies:
+  - bytestring
+  - process
 
 executables:
   kithara-exe:
@@ -57,3 +60,4 @@ tests:
     - -with-rtsopts=-N
     dependencies:
     - kithara
+    - hspec
