--- a/kithara.cabal
+++ b/kithara.cabal
@@ -38,6 +38,7 @@ library
       base >=4.7 && <5
     , bytestring
     , process
+    , random
   default-language: Haskell2010
 
 executable kithara-exe
