--- a/kithara.cabal
+++ b/kithara.cabal
@@ -55,6 +55,21 @@ executable kithara-exe
     , kithara
   default-language: Haskell2010
 
+test-suite doctest
+  type: exitcode-stdio-1.0
+  main-is: DocTest.hs
+  other-modules:
+      Paths_kithara
+  hs-source-dirs:
+      doc-test
+  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
+  build-depends:
+      Glob
+    , base >=4.7 && <5
+    , doctest
+    , kithara
+  default-language: Haskell2010
+
 test-suite kithara-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
