--- a/package.yaml
+++ b/package.yaml
@@ -63,6 +63,18 @@ tests:
     - kithara
     - hspec
 
+  doctest:
+    main:                DocTest.hs
+    source-dirs:         doc-test
+    ghc-options:
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
+    dependencies:
+    - kithara
+    - doctest
+    - Glob
+
 benchmarks:
   kithara-bench:
     main:                Bench.hs
