add basic linting

--- a/kithara.cabal
+++ b/kithara.cabal
@@ -67,7 +67,19 @@ test-suite doctest
       Glob
     , base >=4.7 && <5
     , doctest
-    , kithara
+  default-language: Haskell2010
+
+test-suite hlint
+  type: exitcode-stdio-1.0
+  main-is: HLint.hs
+  other-modules:
+      Paths_kithara
+  hs-source-dirs:
+      linting
+  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
+  build-depends:
+      base >=4.7 && <5
+    , hlint
   default-language: Haskell2010
 
 test-suite kithara-test
