--- a/package.yaml
+++ b/package.yaml
@@ -71,9 +71,18 @@ tests:
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
-    - kithara
     - doctest
     - Glob
+  
+  hlint:
+    main:                HLint.hs
+    source-dirs:         linting
+    ghc-options:
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
+    dependencies:
+    - hlint
 
 benchmarks:
   kithara-bench:
