add simple test for oscillator and try to fix CI

--- a/kithara.cabal
+++ b/kithara.cabal
@@ -96,6 +96,7 @@ test-suite kithara-test
   build-depends:
       base >=4.7 && <5
     , hspec
+    , hspec-discover
     , kithara
   default-language: Haskell2010
 
