add hspec-discover as build tool dependency

--- a/package.yaml
+++ b/package.yaml
@@ -64,7 +64,9 @@ tests:
     dependencies:
     - kithara
     - hspec
-    - hspec-discover
+    verbatim:
+      build-tool-depends:
+        hspec-discover:hspec-discover == 2.*
 
   doctest:
     main:                DocTest.hs
