--- a/kithara.cabal
+++ b/kithara.cabal
@@ -96,9 +96,9 @@ test-suite kithara-test
   build-depends:
       base >=4.7 && <5
     , hspec
-    , hspec-discover
     , kithara
   default-language: Haskell2010
+  build-tool-depends: hspec-discover:hspec-discover == 2.*
 
 benchmark kithara-bench
   type: exitcode-stdio-1.0
