--- a/kithara.cabal
+++ b/kithara.cabal
@@ -67,6 +67,7 @@ test-suite doctest
       Glob
     , base >=4.7 && <5
     , doctest
+    , random
   default-language: Haskell2010
 
 test-suite hlint
