--- a/kithara.cabal
+++ b/kithara.cabal
@@ -67,7 +67,7 @@ test-suite doctest
       Glob
     , base >=4.7 && <5
     , doctest
-    , random
+    , kithara
   default-language: Haskell2010
 
 test-suite hlint
