--- a/kithara.cabal
+++ b/kithara.cabal
@@ -36,9 +36,9 @@ library
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -Wmissing-export-lists
   build-depends:
       base >=4.7 && <5
-    , bytestring
-    , process
-    , random
+    , bytestring ==0.11.4.0
+    , process ==1.6.16.0
+    , random ==1.2.1.1
   default-language: Haskell2010
 
 executable kithara-exe
@@ -64,10 +64,9 @@ test-suite doctest
       doc-test
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -Wmissing-export-lists -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      Glob
+      Glob ==0.10.2
     , base >=4.7 && <5
-    , doctest
-    , kithara
+    , doctest ==0.20.1
   default-language: Haskell2010
 
 test-suite hlint
@@ -80,7 +79,7 @@ test-suite hlint
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -Wmissing-export-lists -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
-    , hlint
+    , hlint ==3.4.1
   default-language: Haskell2010
 
 test-suite kithara-test
@@ -96,10 +95,10 @@ test-suite kithara-test
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
-    , hspec
+    , hspec ==2.9.7
     , kithara
   default-language: Haskell2010
-  build-tool-depends: hspec-discover:hspec-discover == 2.*
+  build-tool-depends: hspec-discover:hspec-discover == 2.9.7
 
 benchmark kithara-bench
   type: exitcode-stdio-1.0
@@ -113,6 +112,6 @@ benchmark kithara-bench
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -Wmissing-export-lists -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
-    , criterion
+    , criterion ==1.5.13.0
     , kithara
   default-language: Haskell2010
